--- a/YuvImageShow/YuvImageShow.csproj
+++ b/YuvImageShow/YuvImageShow.csproj
@@ -54,10 +54,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="imageShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="imageShow.Designer.cs">
+      <DependentUpon>imageShow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="imageShow.resx">
+      <DependentUpon>imageShow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
